# hello

./: .travis.yml  CMakeLists.txt  appveyor.yml  appveyour.yml
include/: hello.h
src/: hello.cpp  main.cpp
test/: CMakeLists.txt  test_hello.cpp
